// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TranslationCard should render TranslationCard component 1`] = `
<div>
  <div
    class="max-w-md mx-auto bg-white shadow-lg rounded-lg my-4 min-h-[200px] w-full flex flex-col justify-between"
  >
    <div
      class="px-6 py-4"
    >
      <div
        class="text-gray-800 text-lg mb-4"
      >
        <p
          class="break-words"
        >
          <strong>
            English:
          </strong>
           
          English text
        </p>
        <p
          class="break-words"
        >
          <strong>
            Elvish:
          </strong>
           
          Elvish text
        </p>
      </div>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex justify-between"
    >
      <button
        class="bg-gray-500 text-white px-4 py-2 rounded-md hover:bg-gray-600"
      >
        Edit
      </button>
      <button
        class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600"
      >
        Delete
      </button>
    </div>
  </div>
</div>
`;

exports[`components/TranslationCard should render TranslationCard component in edit mode 1`] = `
<div>
  <div
    class="max-w-md mx-auto bg-white shadow-lg rounded-lg my-4 min-h-[200px] w-full flex flex-col justify-between"
  >
    <div
      class="px-6 py-4"
    >
      <div
        class="text-gray-800 text-lg mb-4"
      >
        <p>
          <strong>
            English:
          </strong>
           
          <input
            class="w-full px-3 py-2 border border-gray-300 rounded-md mb-4"
            value="English text"
          />
        </p>
        <p>
          <strong>
            Elvish:
          </strong>
           
          <input
            class="w-full px-3 py-2 border border-gray-300 rounded-md mb-4"
            value="Elvish text"
          />
        </p>
      </div>
    </div>
    <div
      class="px-6 py-4 border-t border-gray-200 flex justify-between"
    >
      <button
        class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600"
      >
        Save
      </button>
      <button
        class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
